// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookmarkForm render the BookmarkForm should render create new 1`] = `
<mock-portal>
  <mock-position
    container={<body />}
    placement="left"
    target={[Function]}
  >
    <div
      className="Popover-wd1j0g-0 eOAaQr popover right"
      id="bookmark-popover"
      role="tooltip"
      style={
        Object {
          "display": "block",
          "left": undefined,
          "top": undefined,
        }
      }
    >
      <div
        className="arrow"
        style={
          Object {
            "left": undefined,
            "top": undefined,
          }
        }
      />
      <h3
        className="popover-title"
      >
        Name of search
      </h3>
      <div
        className="popover-content"
      >
        <form>
          <div
            className="form-group"
          >
            <label
              className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
            >
              Title
            </label>
            <input
              className="FormControl-sc-1amoaox-0 hdNTyr form-control"
              onChange={[Function]}
              placeholder="Enter title"
              type="text"
              value="new Title"
            />
          </div>
          <button
            className="button Button-c9cbmb-0 GLfOY btn btn-info"
            disabled={false}
            onClick={[Function]}
            type="submit"
          >
            Create new
          </button>
          <button
            className="button Button-c9cbmb-0 GLfOY btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
        </form>
      </div>
    </div>
  </mock-position>
</mock-portal>
`;

exports[`BookmarkForm render the BookmarkForm should render disabled create new 1`] = `
<mock-portal>
  <mock-position
    container={<body />}
    placement="left"
    target={[Function]}
  >
    <div
      className="Popover-wd1j0g-0 eOAaQr popover right"
      id="bookmark-popover"
      role="tooltip"
      style={
        Object {
          "display": "block",
          "left": undefined,
          "top": undefined,
        }
      }
    >
      <div
        className="arrow"
        style={
          Object {
            "left": undefined,
            "top": undefined,
          }
        }
      />
      <h3
        className="popover-title"
      >
        Name of search
      </h3>
      <div
        className="popover-content"
      >
        <form>
          <div
            className="form-group"
          >
            <label
              className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
            >
              Title
            </label>
            <input
              className="FormControl-sc-1amoaox-0 hdNTyr form-control"
              onChange={[Function]}
              placeholder="Enter title"
              type="text"
              value="new Title"
            />
          </div>
          <button
            className="button Button-c9cbmb-0 GLfOY btn btn-primary"
            disabled={false}
            onClick={[Function]}
            type="submit"
          >
            Save
          </button>
          <button
            className="button Button-c9cbmb-0 GLfOY btn btn-info"
            disabled={true}
            onClick={[Function]}
            type="submit"
          >
            Save as
          </button>
          <button
            className="button Button-c9cbmb-0 GLfOY btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
        </form>
      </div>
    </div>
  </mock-position>
</mock-portal>
`;

exports[`BookmarkForm render the BookmarkForm should render save 1`] = `
<mock-portal>
  <mock-position
    container={<body />}
    placement="left"
    target={[Function]}
  >
    <div
      className="Popover-wd1j0g-0 eOAaQr popover right"
      id="bookmark-popover"
      role="tooltip"
      style={
        Object {
          "display": "block",
          "left": undefined,
          "top": undefined,
        }
      }
    >
      <div
        className="arrow"
        style={
          Object {
            "left": undefined,
            "top": undefined,
          }
        }
      />
      <h3
        className="popover-title"
      >
        Name of search
      </h3>
      <div
        className="popover-content"
      >
        <form>
          <div
            className="form-group"
          >
            <label
              className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
            >
              Title
            </label>
            <input
              className="FormControl-sc-1amoaox-0 hdNTyr form-control"
              onChange={[Function]}
              placeholder="Enter title"
              type="text"
              value="new Title"
            />
          </div>
          <button
            className="button Button-c9cbmb-0 GLfOY btn btn-primary"
            disabled={false}
            onClick={[Function]}
            type="submit"
          >
            Save
          </button>
          <button
            className="button Button-c9cbmb-0 GLfOY btn btn-info"
            disabled={false}
            onClick={[Function]}
            type="submit"
          >
            Save as
          </button>
          <button
            className="button Button-c9cbmb-0 GLfOY btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
        </form>
      </div>
    </div>
  </mock-position>
</mock-portal>
`;
